--- a/templates/seat.css
+++ b/templates/seat.css
@@ -14,6 +14,7 @@
     font-size: small;
     transform-origin: center center;
     user-select: none;
+    z-index: 2;
 }
 
 .seat-name {
